<resources>
    <string name="app_name">Aplikacja do kontroli wydatków</string>
    <string name="stre_back">Cofnij</string>
    <string name="str_data">Data:</string>
    <string name="str_add">Dodaj</string>
    <string name="str_add2">Dodaj stały wydatek</string>
    <string name="str_clear">Wyczyść</string>
    <string name="str_dodaj_wydatek">Dodaj wydatek</string>
    <string name="str_dodaj_dochod">Dodaj dochód</string>
    <string name="str_kategorie">Kategorie</string>
    <string name="str_kategoria">Kategoria</string>
    <string name="str_informacje">Informacje</string>
    <string name="str_posSrodki">Posiadane środki</string>
    <string name="str_srwydatkinadzien">Srednie wydatki na dzień</string>
    <string name="str_sredniewydatkinamiesiac">Srednie wydatki na miesiac</string>
    <string name="str_ostatnie_wydatki">Ostatnie wydatki</string>
    <string name="str_kwota">Kwota:</string>
    <string name="str_od">Od:</string>
    <string name="str_do">Do:</string>
    <string name="str_data_pobrania">Data pierwszego pobrania</string>
    <string name="str_pierwszy_dochod">Data pierwszego dochodu:</string>
    <string name="str_czestotliwosc_dochodu">Częstotliwość dochodu</string>
    <string name="str_staly_dochod">Dodaj stały dochód:</string>
    <string name="str_staly_wydatek">Częstotliwość stałego wydatku</string>
    <string name="str_edytuj">Edytuj</string>
    <string name="str_nazwa">Nazwa kategorii:</string>
    <string name="str_usun">Usuń</string>
    <string name="str_zmien_nazwe">Zmień nazwę</string>
    <string name="str_dodaj_podk">Dodaj podkategorie</string>
    <string name="str_zatwierdz">Zatwierdź</string>
    <string name="str_nazwa_pod">Nazwa podkategorii</string>
    <string name="str_ostatniwydatek">x. Ostatni wydatek</string>
    <string name="str_godzina">Godzina:</string>
    <string name="str_nazwaa">Nazwa:</string>
    <string name="strTeraz">Teraz</string>
    <string name="strWpiszKwote">Musisz wpisać kwote!</string>
    <string name="strListaKategorii">Lista Kategorii:</string>
    <string name="strEdycjaKategorii">Edycja kategorii</string>
    <string name="strEdycjaPodKategorii">Edycja Podkategorii</string>
    <string name="strPodkat">Podkategorie:</string>
    <string name="str_Zapisz">Zapisz</string>
    <string name="str_usunkat">Usuń kategorie</string>
    <string name="strListaCyklicznychWydatkow">Lista cyklicznych wydatków:</string>
    <string name="str_cykliczne">Cykliczne wydatki</string>
    <string name="str_ostatni_dochod">Ostatnie dochody</string>
    <string name="str_ost_doch">x. Ostatni dochód.</string>
    <string name="str_data_new">00-00-0000</string>
    <string name="str_cykliczne_do">Cykliczne dochody</string>
    <string name="str_name1">Wydatki:</string>
    <string name="strName2">Dochody:</string>


    <string-array name="czestotliwosc">
        <item>Codziennie</item>
        <item>Co tydzień</item>
        <item>Co miesiąc</item>
        <item>Co 3 miesiące</item>
        <item>Co rok</item>
    </string-array>

    <string-array name="czestotliwosc2">
        <item>Wszystko</item>
        <item>Dzień</item>
        <item>Tydzień</item>
        <item>Miesiąc</item>
        <item>Kwartał</item>
        <item>Rok</item>
    </string-array>


    <string name="str_skrot_waluty">zł</string>
    <string name="str_dodawno_nowy_wydatek">Dodano nowy wydatek</string>
    <string name="str_kwota_wieksza_od_0">Kwota musi być większa od 0!</string>
    <string name="str_musisz_wpisac_kwote">Musisz wpisać kwote!</string>
    <string name="str_musisz_wpisac_nazwe">Musisz wpisać nazwe!</string>

    <string name="str_dodaj_nowy_wydatek">Dodaj nowy wydatek</string>
    <string name="str_lista_cykl_wydatkow">Lista cyklicznych wydatków</string>
    <string name="str_do2">do</string>

    <string name="str_edycja_cyklicznego_wydatku">Edycja cyklicznego wydatku</string>
    <string name="str_dodaj_cykliczny_wydatek">Dodaj nowy cykliczny wydatek</string>

    <string name="str_edycja_cyklicznego_dochodu">Edycja cyklicznego dochodu</string>
    <string name="str_dodaj_cykliczny_dochod">Dodaj nowy cykliczny dochód</string>
    <string name="str_lista_cykl_dochodow">Lista cyklicznych dochodów</string>

    <string name="str_wybierz_date_i_godzine">Wybierz date i godzine</string>
    <string name="str_wybierz_date">Wybierz date</string>
    <string name="str_data_z_przyszlosci">Data nie może być z przyszłości!</string>

    <string name="str_domyslna_kategoria">Domyślna kategoria</string>
    <string name="str_domyślna_podkategoria">Domyślna podkategoria</string>
    <string name="str_zostala_zaktualizowana">została zaktualizowana</string>
    <string name="str_nowa_kategoria">Nowa kategoria</string>
    <string name="str_zostala_dodana">została dodana</string>
    <string name="str_pomyslnie_usunieto_kategorie">Pomyślnie usunięto kategorie </string>
    <string name="str_dodana_nowa_podkategorie">Dodano nową podkategorie</string>
    <string name="str_zmieniono_nazwe_podkat">Zmienione nazwe podkategorii na </string>
    <string name="str_pomyslnie_usunieto_podkat">Pomyślnie usunięto podkategorie</string>

    <string name="str_dodano_nowy_cykliczny_dochod">Pomyślnie dodano cykliczny dochod </string>
    <string name="str_blad_dodawania_cykl_doch">Błąd przy dodawaniu cyklicznego dochodu.</string>
    <string name="str_uaktualniono_cyk_doch">Pomyślnie zaktualizowano cykliczny dochod </string>
    <string name="str_blad_aktu_cykl_doch">Błąd przy aktualizacji cyklicznego dochodu.</string>

    <string name="str_dodano_nowy_cykliczny_wyd">Pomyślnie dodano cykliczny wydatek </string>
    <string name="str_blad_dodawania_cykl_wyd">Błąd przy dodawaniu cyklicznego wydatku.</string>
    <string name="str_uaktualniono_cyk_wyd">Pomyślnie zaktualizowano cykliczny wydatek </string>
    <string name="str_blad_aktu_cykl_wyd">Błąd przy aktualizacji cyklicznego wydatku.</string>

    <string name="str_blad_daty_1">Data początku oraz końca muszą być od siebie różne!</string>
    <string name="str_blad_daty_2">Data pierwszego pobrania musi być w przedziale od </string>
    <string name="str_blad_daty_3">Termin końca musi być większy od </string>

    <string name="str_szczeg_info">Szczegółowe informacje</string>
    <string name="str_dodaj_kat">Dodaj nową kategorie</string>
    <string name="str_edycja_kat">Edytuj kategorie</string>
    <string name="str_lista_kat">Lista kategorii</string>
    <string name="str_saldo">Saldo konta</string>

    <string name="str_wyd_wzg_kat">Wydatki posortowane po kategoriach</string>
    <string name="str_nowy_dochod">Dodano nowy dochód </string>


</resources>
