<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="pl.damiandziura.kontrolawydatkow.nowyPrzychod">
    <TextView
        android:id="@+id/lblNazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_nazwaa" />

    <EditText
        android:id="@+id/txtNazwa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblNazwa"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblKwota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtNazwa2"
        android:text="@string/str_kwota" />

    <EditText
        android:id="@+id/txtEditAmount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblKwota"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/SpinnerKategoriaWydatki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditAmount2"
        android:layout_marginTop="29dp" />

    <Spinner
        android:id="@+id/SpinnerPodKategoriaWydatki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SpinnerKategoriaWydatki"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/lbldata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_data"
        android:layout_above="@+id/btDodaj"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <TextView
        android:id="@+id/txtDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lbldata"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/lblNazwa"
        android:layout_toRightOf="@+id/lblNazwa"
        android:onClick="WybierzDateGodzine"
        android:text="@string/str_data_new" />

    <Button
        android:id="@+id/btDodaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btClear"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="dodaj"
        android:text="@string/str_Zapisz" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="wyczysc"
        android:text="@string/str_clear" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btCofnij"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="DodajStalyDochod"
        android:text="@string/str_cykliczne_do" />

    <Button
        android:id="@+id/btCofnij"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="cofnij"
        android:text="@string/stre_back" />
</RelativeLayout>
