<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.damiandziura.kontrolawydatkow.addExpense">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/str_nazwaa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/txtCyclicalIncomeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblName"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignRight="@+id/txtEditAmount2"
        android:layout_alignEnd="@+id/txtEditAmount2" />

    <TextView
        android:id="@+id/lblCyclicalIncomeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtCyclicalIncomeName"
        android:text="@string/str_kwota" />

    <EditText
        android:id="@+id/txtEditAmount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblCyclicalIncomeAmount"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/SpinnerCategoryExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditAmount2"
        android:layout_marginTop="29dp" />


    <Spinner
        android:id="@+id/SpinerSubCategoryExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SpinnerCategoryExpense"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SpinerSubCategoryExpense" />

    <TextView
        android:id="@+id/txtDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SelectDateAndHour"
        android:text="@string/str_data_new"
        android:layout_alignBaseline="@+id/lblDate"
        android:layout_alignBottom="@+id/lblDate"
        android:layout_toRightOf="@+id/lblDate"
        android:layout_toEndOf="@+id/lblDate" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btClear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="add"
        android:text="@string/str_Zapisz" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clean"
        android:text="@string/str_clear"
        android:layout_above="@+id/btCyclicalIncomeConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btCyclicalIncomeConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btCyclicalIncomeBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="CyclicalExpenses"
        android:text="@string/str_cykliczne" />

    <Button
        android:id="@+id/btCyclicalIncomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="back"
        android:text="@string/stre_back" />

</RelativeLayout>
