<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="pl.damiandziura.kontrolawydatkow.addCategory">

    <TextView
        android:id="@+id/dummyview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_nazwa" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblName"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btCyclicalIncomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dummyview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummyview"
        android:onClick="back"
        android:text="@string/stre_back" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Red2"
        android:onClick="delete"
        android:text="@string/str_usun"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/dummyview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btCyclicalIncomeClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addSubcategory"
        android:text="@string/str_dodaj_podk"
        android:layout_above="@+id/btCyclicalIncomeBack"
        android:layout_toLeftOf="@+id/btCyclicalIncomeConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btCyclicalIncomeConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btCyclicalIncomeClean"
        android:layout_toEndOf="@+id/btCyclicalIncomeBack"
        android:layout_toRightOf="@+id/btCyclicalIncomeBack"
        android:onClick="confirm"
        android:text="@string/str_Zapisz" />

    <TextView
        android:id="@+id/lblSubCategoryList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:text="@string/strPodkat" />

    <ListView
        android:id="@+id/SubcategoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btCyclicalIncomeClean"
        android:layout_below="@+id/lblSubCategoryList" />

    <RadioGroup
        android:id="@+id/radioIncomeExpanse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/radioExpanse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/str_name1" />

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strName2" />
    </RadioGroup>

</RelativeLayout>
