<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="pl.damiandziura.kontrolawydatkow.dodajStalydochod">

    <TextView
        android:id="@+id/dummyview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/lblStalyWydatekNazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_nazwaa" />

    <EditText
        android:id="@+id/txtNazwa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblStalyWydatekNazwa"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblKwota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtNazwa"
        android:text="@string/str_kwota" />

    <EditText
        android:id="@+id/txtKwota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblKwota"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblczestotliwosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtKwota"
        android:layout_marginTop="19dp"
        android:text="@string/str_staly_wydatek" />

    <Spinner
        android:id="@+id/SpinnerCzestotliwosc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblczestotliwosc"
        android:layout_toRightOf="@+id/lblczestotliwosc"
        android:layout_toEndOf="@+id/lblczestotliwosc"
        android:entries="@array/czestotliwosc"/>

    <Spinner
        android:id="@+id/SpinnerKategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SpinnerCzestotliwosc"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/dummyview"
        android:layout_toStartOf="@+id/dummyview" />

    <Spinner
        android:id="@+id/SpinnerPodKategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/SpinnerKategoria"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/SpinnerCzestotliwosc"
        android:layout_alignStart="@+id/SpinnerCzestotliwosc" />

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_od"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl1"
        android:layout_marginTop="11dp"
        android:text="@string/str_do" />

    <TextView
        android:id="@+id/lbl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl2"
        android:layout_marginTop="12dp"
        android:text="@string/str_data_pobrania" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="WybierzDateGodzine1"
        android:text="@string/str_data_new"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/dummyview"
        android:layout_alignStart="@+id/dummyview" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dummyview"
        android:layout_alignStart="@+id/dummyview"
        android:layout_alignTop="@+id/lbl2"
        android:onClick="WybierzDateGodzine2"
        android:text="@string/str_data_new" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl3"
        android:layout_alignLeft="@+id/dummyview"
        android:layout_alignStart="@+id/dummyview"
        android:onClick="WybierzDateGodzine3"
        android:text="@string/str_data_new" />

    <Button
        android:id="@+id/btCofnij"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dummyview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummyview"
        android:onClick="cofnij"
        android:text="@string/stre_back" />

    <Button
        android:id="@+id/btDodaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dodaj"
        android:text="@string/str_Zapisz"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/SpinnerPodKategoria"
        android:layout_alignStart="@+id/SpinnerPodKategoria"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btWyczysc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btCofnij"
        android:layout_alignEnd="@+id/dummyview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummyview"
        android:onClick="wyczysc"
        android:text="@string/str_clear" />

    <Button
        android:id="@+id/btUsun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btDodaj"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/btDodaj"
        android:layout_alignTop="@+id/btWyczysc"
        android:backgroundTint="@color/RedAsFuck"
        android:onClick="usun"
        android:text="@string/str_usun" />

</RelativeLayout>
