<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.damiandziura.kontrolawydatkow.addSubCategory">

    <EditText
        android:id="@+id/txtSubCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtSubCategoryName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp"
        android:text="@string/str_nazwaa" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtSubCategoryName"
        android:backgroundTint="@color/Red2"
        android:onClick="delete"
        android:text="@string/str_usun"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btCyclicalIncomeBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="back"
        android:text="@string/stre_back" />

    <Button
        android:id="@+id/btCyclicalIncomeConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirm"
        android:text="@string/str_Zapisz"
        android:layout_above="@+id/btCyclicalIncomeBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
